configs/external/seafile/configs/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: seafile-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: seafile-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: seafile-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: seafile-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: seafile-redis
spec:
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: seafile-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
