configs/external/seafile/configs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - seafile.burrell.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /accounts/login/
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /sso/?next=/
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seafile
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile-redirect
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - seafile.burrell.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: seafile-timeout
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: seafile
  timeout:
    http:
      connectionIdleTimeout: 1800s
      maxConnectionDuration: 1800s
    tcp:
      connectTimeout: 60s
